<resources>
    <string name="app_name">GastoViagem</string>

    <string name="distancia">Distancia</string>
    <string name="total_de_km">Total de KM</string>

    <string name="preco">Preço </string>
    <string name="preco_por_litro"> Preço por Litro </string>

    <string name="autonomia">Autonomia </string>
    <string name="KMS_por_litro"> KMs por Litro </string>

    <string name="gasto_total"> SEU GASTO TOTAL SERÁ DE: </string>
    <string name="valor_total">R$ 0</string>

    <string name="calculo"> Calcular </string>
</resources>