<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".MainActivity">


    <EditText
        android:id="@+id/edit_distance"
        android:layout_width="match_parent"
        android:inputType="number"
        android:layout_height="wrap_content"
        android:hint="@string/distancia" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/total_de_km" />

    <EditText
        android:id="@+id/edit_price"
        android:layout_width="match_parent"
        android:inputType="numberDecimal"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/preco" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:gravity="center"
        android:text="@string/preco_por_litro" />

    <EditText
        android:id="@+id/edit_autonomy"
        android:layout_width="match_parent"
        android:inputType="numberDecimal"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/autonomia" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/KMS_por_litro" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:gravity="center"
        android:text="@string/gasto_total"
        android:textSize="20dp" />

    <TextView
        android:id="@+id/text_total_value"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:text="@string/valor_total"
        android:textColor="#040087"
        android:textSize="30dp" />

    <Button
        android:id="@+id/button_calculate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/teal_200"
        android:text="@string/calculo"
        android:textSize="20dp" />


</LinearLayout>